# webarhive

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 46755f74e169_whois_cache_best_snapshot_fields.py  8a3fd2e51a07_cdx_cache.py  d940d43ff7b6_initial_schema.py
data/: settings.json
src/webarhive/: cli.py
src/webarhive/analysis/: __init__.py  best_snapshot.py  drops.py  history.py  redirects.py  topic_shift.py  topics.py  verdict.py
src/webarhive/cdx/: __init__.py  client.py  throttle.py
src/webarhive/clients/: __init__.py  whois.py
src/webarhive/config/: __init__.py  categories.py  settings.py
src/webarhive/db/: __init__.py  engine.py  models.py  repo.py
src/webarhive/domains/: __init__.py  loader.py  normalize.py
src/webarhive/fetcher/: __init__.py  parser.py  snapshot.py
src/webarhive/llm/: __init__.py  client.py  prompts.py
src/webarhive/logging_/: __init__.py  tracer.py
src/webarhive/orchestrator/: __init__.py  runner.py
src/webarhive/web/: __init__.py  app.py  deps.py  routes.py
src/webarhive/web/templates/: _components.html  _icons.html  base.html  canvas.html  card.html  help.html  (+2 more)
tests/: test_best_snapshot.py  test_cdx_client.py  test_db.py  test_digest_dedup.py  test_drops.py  test_history.py  test_llm_client.py  test_loader.py  test_normalize.py  test_orchestrator.py  test_parser.py  test_redirect_cap.py  test_redirects.py  test_settings_overrides.py  test_topic_shift.py  test_topics.py  test_verdict.py  test_web.py  test_whois.py
(+3 files in other folders)
